# curso-python

./: .gitignore  01 bucles.ipynb  02 bucles-for.ipynb  03 estructuras-de-datos.ipynb  04 funciones.ipynb  05 modulos-e-imports.ipynb  06 Entornos en python.md  07 comprehensions.ipynb  07 comprehensions.md  bucles.ipynb  bucles.md  calculadora.py  condicionales.ipynb  config.py  contactos.py  estructuras-de-datos.md  funciones.md  impot-ejemplos.ipynb  mis_utils.py  reorganize_bucles.py  reorganize_for.py
curso-python/: pyproject.toml
module/: format.py  main.py
modules/: README.md
modules/ejercicio_01_importacion_basica/: README.md  main.py  modulo.py
modules/ejercicio_02_import_as_y_from/: README.md  main.py  operaciones.py
modules/ejercicio_03_paquetes/: README.md  main.py
modules/ejercicio_03_paquetes/paquete_utilidades/: calculos.py
modules/ejercicio_04_uso_de_main/: README.md  script.py  utilidades.py
modules/ejercicio_05_main_como_punto_de_entrada/: README.md  app.py  helpers.py
modules/ejercicio_06_ejecucion_de_modulo/: README.md  main.py  modulo_ejecutable.py
output/jupyter-notebook/: funciones-en-python.ipynb
requirements-ejemplo/: calificaciones.py  chat.py  main.py
streamlit/: README.md  app.py
streamlit/ejemplos/: 00_indice.py  01_variables.py  02_condicionales.py  03_while.py  04_for.py  05_funciones.py  06_listas.py  07_diccionarios.py  08_tuplas.py  09_complejo_lista_diccionarios.py  10_complejo_calculadora_estadisticas.py  11_comprehensions.py  README.md
